# tinyos-course

./: .gitignore  README.md  course-roadmap.jsx
.github/workflows/: deploy-pages.yml
labs/phase_0_boot/: COURSE.en.md  COURSE.zh-CN.md  Cargo.toml  Makefile  README.md  linker.ld  rust-toolchain.toml
labs/phase_0_boot/.cargo/: config.toml
labs/phase_0_boot/scripts/: grade.py
labs/phase_0_boot/src/: console.rs  entry.asm  lang_items.rs  main.rs  sbi.rs  types.rs
labs/phase_0_boot/tests/: test_lab1_boot.rs
labs/phase_1_trap/: COURSE.en.md  COURSE.zh-CN.md  Cargo.toml  Makefile  README.md  linker.ld
labs/phase_1_trap/.cargo/: config.toml
labs/phase_1_trap/scripts/: grade.py
labs/phase_1_trap/src/: batch.rs  console.rs  lang_items.rs  loader.rs  main.rs  sbi.rs  types.rs
labs/phase_1_trap/src/syscall/: fs.rs  mod.rs  process.rs
labs/phase_1_trap/src/trap/: context.rs  mod.rs  trap.S
labs/phase_1_trap/tests/: test_lab1_context.rs  test_lab2_trap.rs  test_lab3_syscall.rs
labs/phase_1_trap/user/: Cargo.toml
labs/phase_2_proc/: COURSE.en.md  COURSE.zh-CN.md  Cargo.toml  Makefile  README.md
labs/phase_2_proc/scripts/: grade.py
labs/phase_2_proc/src/: config.rs  console.rs  entry.asm  lang_items.rs  loader.rs  main.rs  sbi.rs  timer.rs  types.rs
labs/phase_2_proc/src/syscall/: fs.rs  mod.rs  process.rs
labs/phase_2_proc/src/task/: context.rs  mod.rs  switch.S  task.rs
labs/phase_2_proc/src/trap/: context.rs  mod.rs  trap.S
labs/phase_2_proc/tests/: test_lab1_switch.rs  test_lab2_scheduler.rs  test_lab3_timer.rs
labs/phase_2_proc/user/: Cargo.toml  linker.ld
labs/phase_2_proc/user/.cargo/: config.toml
labs/phase_2_proc/user/src/: lib.rs
labs/phase_3_sync/: COURSE.en.md  COURSE.zh-CN.md  Cargo.toml  README.md
labs/phase_3_sync/scripts/: grade.py
labs/phase_3_sync/src/: console.rs  heap.rs  lang_items.rs  main.rs  sbi.rs  sync_lib.rs
labs/phase_3_sync/src/arch/: interrupts.rs  mod.rs
labs/phase_3_sync/src/sync/: condvar.rs  mod.rs  semaphore.rs  spin.rs
labs/phase_3_sync/src/syscall/: mod.rs  sync.rs
labs/phase_3_sync/src/task/: mod.rs
labs/phase_3_sync/src/trap/: mod.rs
labs/phase_3_sync/tests/: test_lab1_spin.rs  test_lab2_sync_primitives.rs
labs/phase_3_sync/user/: Cargo.toml
labs/phase_3_sync/user/src/: console.rs  lib.rs  syscall.rs
labs/phase_4_vm/: COURSE.en.md  COURSE.zh-CN.md  Cargo.toml  Makefile  README.md  linker.ld  rust-toolchain.toml
labs/phase_4_vm/.cargo/: config.toml
labs/phase_4_vm/scripts/: grade.py
labs/phase_4_vm/src/: config.rs  console.rs  main.rs  sbi.rs
labs/phase_4_vm/src/mm/: mod.rs
labs/phase_4_vm/src/syscall/: mod.rs  process.rs
labs/phase_4_vm/src/task/: mod.rs
labs/phase_4_vm/src/trap/: mod.rs  trampoline.S
labs/phase_4_vm/tests/: test_lab1_frame.rs  test_lab2_pagetable.rs  test_lab3_memset.rs
labs/phase_5_fs/: COURSE.en.md  COURSE.zh-CN.md  Cargo.toml  Makefile  README.md  linker.ld  rust-toolchain.toml
labs/phase_5_fs/.cargo/: config.toml
labs/phase_5_fs/easy-fs/: Cargo.toml
labs/phase_5_fs/easy-fs-fuse/: Cargo.toml
labs/phase_5_fs/easy-fs-fuse/src/: main.rs
labs/phase_5_fs/easy-fs/src/: bitmap.rs  block_cache.rs  block_dev.rs  efs.rs  layout.rs  lib.rs  vfs.rs
labs/phase_5_fs/easy-fs/tests/: test_lab1_blkdev.rs
labs/phase_5_fs/scripts/: grade.py
labs/phase_5_fs/src/: console.rs  entry.asm  lang_items.rs  main.rs  sbi.rs
labs/phase_5_fs/src/drivers/: mod.rs  virtio_blk.rs
labs/phase_5_fs/src/fs/: inode.rs  mod.rs  pipe.rs
labs/phase_5_fs/src/mm/: mod.rs
labs/phase_5_fs/src/sync/: mod.rs
labs/phase_5_fs/src/syscall/: fs.rs  mod.rs
labs/phase_5_fs/src/task/: mod.rs
labs/phase_5_fs/src/trap/: mod.rs
labs/phase_5_fs/tests/: test_lab2_easyfs.rs  test_lab3_vfs.rs
labs/phase_6_shell/: COURSE.en.md  COURSE.zh-CN.md  Cargo.toml  Makefile  README.md  linker.ld
labs/phase_6_shell/scripts/: grade.py
labs/phase_6_shell/src/: main.rs
labs/phase_6_shell/src/drivers/: mod.rs
labs/phase_6_shell/src/fs/: mod.rs  pipe.rs  stdio.rs
labs/phase_6_shell/src/mm/: address.rs  frame_allocator.rs  memory_set.rs  mod.rs  page_table.rs
labs/phase_6_shell/src/sync/: mod.rs  mutex.rs  up.rs
labs/phase_6_shell/src/syscall/: fs.rs  mod.rs  process.rs
labs/phase_6_shell/src/task/: context.rs  manager.rs  mod.rs  pid.rs  processor.rs
labs/phase_6_shell/src/trap/: mod.rs
labs/phase_6_shell/tests/: test_lab1_fork.rs  test_lab2_pipe.rs  test_lab3_shell.rs
labs/phase_6_shell/user/: Cargo.toml
labs/phase_6_shell/user/src/: console.rs  lib.rs  syscall.rs
labs/shared/: TOOLCHAIN.md  grade_utils.py  run_qemu.sh
website/: index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx  global.css  main.tsx
website/src/components/: CourseRoadmap.tsx  LanguageSwitcher.tsx
website/src/data/: index.ts  phase0.ts  phase1.ts  phase2.ts  phase3.ts  phase4.ts  phase5.ts  phase6.ts  phases.ts  types.ts
website/src/i18n/: LocaleContext.tsx  en.ts  index.ts  zh-CN.ts  zh-TW.ts
website/src/pages/: LessonPage.tsx
