[package]
name = "phase_1_trap"
version = "0.1.0"
edition = "2021"
authors = ["TinyOS Course"]

[dependencies]
# no external deps — fully no_std bare-metal

[profile.release]
panic = "abort"
lto = false
debug = true

[profile.dev]
panic = "abort"

[[bin]]
name = "kernel"
path = "src/main.rs"

# Host-side unit tests are built with `cargo test --target <host>` and gated by
# `#[cfg(test)]`. They exercise pure-logic modules (TrapContext layout, syscall
# dispatch) without linking the kernel.
